[gd_scene load_steps=8 format=2]

[ext_resource path="res://Data/Backgrounds/Factory.tscn" type="PackedScene" id=1]
[ext_resource path="res://Data/UI/MainMenu/Button/MainMenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/UI/MainMenu.png" type="Texture" id=3]
[ext_resource path="res://Data/Scenes/MainMenu.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[node name="MainMenu" type="Node2D"]
position = Vector2( -213, -120 )
script = ExtResource( 4 )

[node name="GrayBricks" parent="." instance=ExtResource( 1 )]

[node name="PlayButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 213, 136 )
labText = "PLAY"
initialAngle = 90
selected = true
frontFaceTex = SubResource( 1 )

[node name="ConfigButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 213, 136 )
labText = "CONFIG"
initialAngle = 210
frontFaceTex = SubResource( 2 )

[node name="DecryptButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 213, 136 )
labText = "DECRYPT"
initialAngle = 330
frontFaceTex = SubResource( 3 )

[node name="PaperTowelLookingAssFront" type="Sprite" parent="."]
position = Vector2( 61, 152 )
z_index = -1
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 128, 320, 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="PaperTowelLookingAssBack" type="Sprite" parent="."]
position = Vector2( 61, 124 )
z_index = -1
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 96, 320, 32 )
__meta__ = {
"_edit_lock_": true
}
